fix: fix-responsive and add scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  /* -ms-overflow-style: none; 
+  scrollbar-width: none;  */
 }
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -39,5 +39,8 @@ code {
   }
   .bg-gradient {
     @apply bg-gradient-to-r from-[#0f0c29] via-[#302b63] to-[#24243e];
+  }
+  .title-1 {
+    @apply text-3xl md:text-5xl text-center font-semibold text-[#ff7675];
   }
 }
